--- a/pizza.shop.components/docker-compose.yml
+++ b/pizza.shop.components/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     image: 'canals/php:latest'
     env_file: ./shop.env
     ports:
-      - '2080:80'
-      - '1443:443'
+      - '18070:80'
+      - '18071:443'
     volumes:
       - ../shop.pizza-shop/public:/var/www/html
       - ../shop.pizza-shop:/var/www
@@ -33,7 +33,7 @@ services:
     command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
     env_file: ./shop.env
     ports:
-      - '3307:3306'
+      - '18076:3306'
     networks:
       - pizza-shop.net
     volumes:
@@ -45,7 +45,7 @@ services:
     image: 'postgres:latest'
     env_file: ./cat.env
     ports:
-      - '5432:5432'
+      - '18075:5432'
     networks:
       - pizza-shop.net
     volumes:
@@ -55,10 +55,40 @@ services:
   #
   adminer:
     image: adminer
+    command: php -S 0.0.0.0:8080 -t /var/www/html
     ports:
-      - '8080:8080'
+      - '18077:8080'
     networks:
       - pizza-shop.net
+    depends_on:
+      - pizza-shop.commande.db
+      - pizza-shop.catalogue.db
+
+  phpmyadmin.commande:
+    image: phpmyadmin:latest
+    environment:
+      PMA_HOST: pizza-shop.commande.db
+      PMA_PORT: 3306
+    ports:
+      - "18078:80"
+    networks:
+      - pizza-shop.net
+    depends_on:
+      - pizza-shop.catalogue.db
+      - pizza-shop.commande.db
+
+  phpmyadmin.catalogue:
+    image: phpmyadmin:latest
+    environment:
+      PMA_HOST: pizza-shop.catalogue.db
+      PMA_PORT: 5432
+    ports:
+      - "18079:80"
+    networks:
+      - pizza-shop.net
+    depends_on:
+      - pizza-shop.catalogue.db
+      - pizza-shop.commande.db
 
 ######################################
 ###  AUTH Service : service d'authentification JWT
