--- a/shop.pizza-shop/config/catalog.db.ini.template
+++ b/shop.pizza-shop/config/catalog.db.ini.template
@@ -1,8 +1,8 @@
 connection=catalogue
 driver=pgsql
-username=
-password=
-host=pizza-shop.catalogue.db
+username=pizza_cat
+password=pizza_cat
+host=docketu.iutnc.univ-lorraine.fr:18075
 database=pizza_catalog
 charset=utf8
 collation=utf8_unicode_ci
