--- a/shop.pizza-shop/config/commande.db.ini.template
+++ b/shop.pizza-shop/config/commande.db.ini.template
@@ -1,8 +1,8 @@
 connection=commande
 driver=mysql
-username=
-password=
-host=pizza-shop.commande.db
+username=pizza_shop
+password=pizza_shop
+host=docketu.iutnc.univ-lorraine.fr:18075
 database=pizza_shop
 charset=utf8
 collation=utf8_unicode_ci
