problème connexion "shop"

--- a/shop.pizza-shop/config/commande.db.ini
+++ b/shop.pizza-shop/config/commande.db.ini
@@ -2,7 +2,9 @@ connection=commande
 driver=mysql
 username=pizza_shop
 password=pizza_shop
-host=docketu.iutnc.univ-lorraine.fr:18076
+host=docketu.iutnc.univ-lorraine.fr
+port=18076
+;host=pizza-shop.commande.db
 database=pizza_shop
 charset=utf8
 collation=utf8_unicode_ci
