--- a/shop.pizza-shop/config/catalog.db.ini
+++ b/shop.pizza-shop/config/catalog.db.ini
@@ -2,7 +2,9 @@ connection=catalogue
 driver=pgsql
 username=pizza_cat
 password=pizza_cat
-host=docketu.iutnc.univ-lorraine.fr:18075
+host=docketu.iutnc.univ-lorraine.fr
+port=18075
+;host=pizza-shop.catalogue.db
 database=pizza_catalog
 charset=utf8
 collation=utf8_unicode_ci
