Préparation pour le TD4 + transformation de accéderCommande en static + exception() en static

--- a/auth.pizza-shop/composer.json
+++ b/auth.pizza-shop/composer.json
@@ -16,7 +16,8 @@
   },
   "autoload": {
     "psr-4" : {
-      "pizza-shop\\auth\\api" : "./src/"
+      "pizzashop\\auth\\test" : "./tests/",
+      "pizzashop\\auth\\api" : "./src/"
     }
   }
 }
