\\ manquant rajouter à la fin du composer.json

--- a/auth.pizza-shop/composer.json
+++ b/auth.pizza-shop/composer.json
@@ -16,8 +16,8 @@
   },
   "autoload": {
     "psr-4" : {
-      "pizzashop\\auth\\test" : "./tests/",
-      "pizzashop\\auth\\api" : "./src/"
+      "pizzashop\\auth\\test\\" : "./tests/",
+      "pizzashop\\auth\\api\\" : "./src/"
     }
   }
 }
