--- a/auth.pizza-shop/config/auth.db.ini
+++ b/auth.pizza-shop/config/auth.db.ini
@@ -4,7 +4,7 @@ username=pizza_shop
 password=pizza_shop
 host=docketu.iutnc.univ-lorraine.fr
 port=18078
-;host=pizza-shop.catalogue.db
+;host=pizza-shop.auth.db
 database=pizza_shop
 charset=utf8
 collation=utf8_unicode_ci
