--- a/auth.pizza-shop/config/auth.db.ini
+++ b/auth.pizza-shop/config/auth.db.ini
@@ -2,9 +2,10 @@ connection=authentification
 driver=mysql
 username=pizza_shop
 password=pizza_shop
-host=docketu.iutnc.univ-lorraine.fr
-port=18078
-;host=pizza-shop.auth.db
+;host=docketu.iutnc.univ-lorraine.fr
+;port=18078
+host=pizza-shop.auth.db
+port=3306
 database=pizza_shop
 charset=utf8
 collation=utf8_unicode_ci
