--- a/shop.pizza-shop/config/commande.db.ini
+++ b/shop.pizza-shop/config/commande.db.ini
@@ -2,9 +2,10 @@ connection=commande
 driver=mysql
 username=pizza_shop
 password=pizza_shop
-host=docketu.iutnc.univ-lorraine.fr
-port=18076
-;host=pizza-shop.commande.db
+;host=docketu.iutnc.univ-lorraine.fr
+;port=18076
+host=pizza-shop.commande.db
+port=3306
 database=pizza_shop
 charset=utf8
 collation=utf8_unicode_ci
