--- a/shop.pizza-shop/config/catalog.db.ini
+++ b/shop.pizza-shop/config/catalog.db.ini
@@ -2,10 +2,10 @@ connection=catalogue
 driver=pgsql
 username=pizza_cat
 password=pizza_cat
-;host=docketu.iutnc.univ-lorraine.fr
-;port=18075
-host=pizza-shop.catalogue.db
-port=5432
+host=docketu.iutnc.univ-lorraine.fr
+port=18075
+;host=pizza-shop.catalogue.db
+;port=5432
 database=pizza_catalog
 charset=utf8
 collation=utf8_unicode_ci
