--- a/shop.pizza-shop/composer.json
+++ b/shop.pizza-shop/composer.json
@@ -10,7 +10,7 @@
     "php-di/php-di": "^6.4.0",
     "php-di/slim-bridge": "^3.2",
     "respect/validation": "^2.2.0",
-    "php-amqplib/php-amqplib": "^2.8",
+    "php-amqplib/php-amqplib": "3.6",
     "fakerphp/faker": "^1.23"
   },
   "require-dev": {
