--- a/pizza.shop.components/docker-compose.yml
+++ b/pizza.shop.components/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - pizza-shop.net
     volumes:
       - ../shop.pizza-shop/sql:/var/sql
+      - ../shop.pizza-shop/sql/commande:/docker-entrypoint-initdb.d
 
   # service sql pour le catalogue des pizzas -
   # utilisé par l'api order
@@ -50,6 +51,7 @@ services:
       - pizza-shop.net
     volumes:
       - ../shop.pizza-shop/sql:/var/sql'
+      - ../shop.pizza-shop/sql/catalogue:/docker-entrypoint-initdb.d
   #
   # service administration des bases sql
   #
@@ -96,6 +98,7 @@ services:
       - pizza-shop.net
     volumes:
       - ../auth.pizza-shop/sql:/var/sql
+      - ../auth.pizza-shop/sql/commande:/docker-entrypoint-initdb.d
 
  
 
