debut service docker node

--- a/pizza.shop.components/docker-compose.yml
+++ b/pizza.shop.components/docker-compose.yml
@@ -133,3 +133,18 @@ services:
     volumes:
       - ../rabbitmq.pizza-shop:/var/lib/rabbitmq
     env_file: ./rab.env
+
+  node.pizza-shop:
+    image: node:alpine
+    networks:
+      - pizza-shop.net
+    working_dir: /usr/app
+    command: sh -c "npm i && npm run watch" #for development only
+    #command: sh -c "npm i && npm start" #for production only
+    volumes:
+      - ../node.pizza-shop:/usr/app
+    ports:
+      - '3333:3000'
+    environment:
+      - 'PORT: 3000'
+      - 'NODE_ENV: development'
