--- a/node.pizza-shop/package.json
+++ b/node.pizza-shop/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js",
+    "watch": "nodemon server.js"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -20,7 +20,7 @@
     "amqplib": "^0.10.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.1"
   },
   "type": "module"
 }
