--- a/pizza.shop.components/docker-compose.yml
+++ b/pizza.shop.components/docker-compose.yml
@@ -148,3 +148,15 @@ services:
     environment:
       - 'PORT: 3000'
       - 'NODE_ENV: development'
+
+  node.pizza-shop.db:
+    image: 'mariadb:latest'
+    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
+    env_file: ./shop.env
+    ports:
+      - '190:3306'
+    networks:
+      - pizza-shop.net
+    volumes:
+      - ../node.pizza-shop/sql-auto:/var/sql
+      - ../node.pizza-shop/sql-auto:/docker-entrypoint-initdb.d
