--- a/node.pizza-shop/package.json
+++ b/node.pizza-shop/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "api.prod.pizza-shop",
+  "name": "api",
   "version": "1.0.0",
-  "private": true,
+  "description": "Express.js API + Node.js + Docker",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev:windows": "nodemon --legacy-watch server.js",
+    "watch": "node --watch server.js"
   },
+  "keywords": [],
+  "author": "Alexandre Leroux (alex@shrp.dev)",
+  "license": "ISC",
   "dependencies": {
-    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^3.0.1",
-    "mysql": "^2.18.1",
-    "uuid": "^9.0.1",
-    "amqplib": "^0.10.3"
+    "knex": "^3.1.0",
+    "mysql": "2.18.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "type": "module"
+    "nodemon": "^3.0.3"
+  }
 }
