--- a/pizza.shop.components/docker-compose.yml
+++ b/pizza.shop.components/docker-compose.yml
@@ -145,9 +145,9 @@ services:
       - ../node.pizza-shop:/usr/app
     ports:
       - '3333:3000'
-    environment:
-      - 'PORT: 3000'
-      - 'NODE_ENV: development'
+    env_file:
+      - ./node.env
+
 
   node.pizza-shop.db:
     image: 'mariadb:latest'
