--- a/websocket.pizza-shop/.env
+++ b/websocket.pizza-shop/.env
@@ -1,5 +1,5 @@
 AMQP_URL="amqp://pizza_shop:pizza_shop@rabbitmq:5672"
 EXCHANGE=pizzashop
-ROUTING_KEY=
-QUEUE=
+ROUTING_KEY=suivi
+QUEUE=suivi_commandes
 CONSUMER_TAG=websocket
